# CSCI_Graphics

./: .gitignore  README  gears
HW2_Lorenz/: .swp  Makefile  lorenz  lorenz.c  readme.txt
HW3_Scene/: CSCIx229.h  Makefile  hw3.c  readme.md
HW4_Projection/: Makefile  projection  projection.c  readme.md
HW5_Lighting/: Makefile  README.md  hw5.c
HW6_Textures/: Makefile  README.md  hw6  pathtracer.cpp
Pathtracer_Final/: CMakeLists.txt  README.md
Pathtracer_Final/src/: hittable.h  hittable_list.h  main.cc  main.cpp  main2.cpp  material.h  quad.cpp  quad.h  sphere.h  workgroup\.cpp
Pathtracer_Final/src/shaders/: frag_shader.glsl
Pathtracer_Final/utils/: camera.h  color.h  utilities.h
ex13/: README  ex13
ex15/: README  ex15  ex15.c
ex16/: README  ex16  ex16.c  makefile
ex21/: README  ex21
ex9/: README
sdl22v2_example/: README  makefile  print-dl.c  sdl22v2  sdl22v2.c  wall.c  wall.h
shaders_example25/: README  ex25  ex25.c
